GPencil: Use stack order for build modifiers

With the new evaluation, is possible to evaluate the modifiers in stack order.

This fix T66744