source/blender/blenkernel/BKE_gpencil_modifier.h
@@ -293,24 +293,6 @@ bool BKE_gpencil_has_geometry_modifiers(struct Object *ob);
 bool BKE_gpencil_has_time_modifiers(struct Object *ob);
 bool BKE_gpencil_has_transform_modifiers(struct Object *ob);
 
-void BKE_gpencil_stroke_modifiers(struct Depsgraph *depsgraph,
-                                  struct Object *ob,
-                                  struct bGPDlayer *gpl,
-                                  struct bGPDframe *gpf,
-                                  struct bGPDstroke *gps,
-                                  bool is_render);
-void BKE_gpencil_geometry_modifiers(struct Depsgraph *depsgraph,
-                                    struct Object *ob,
-                                    struct bGPDlayer *gpl,
-                                    struct bGPDframe *gpf,
-                                    bool is_render);
-int BKE_gpencil_time_modifier(struct Depsgraph *depsgraph,
-                              struct Scene *scene,
-                              struct Object *ob,
-                              struct bGPDlayer *gpl,
-                              int cfra,
-                              bool is_render);
-
 void BKE_gpencil_lattice_init(struct Object *ob);
 void BKE_gpencil_lattice_clear(struct Object *ob);
 
